package edu.fiuba.algo3.Modelo.Equipamientos;

import edu.fiuba.algo3.Modelo.Gladiador;
import edu.fiuba.algo3.Modelo.Casillas.VisitorDeCasillas;

public interface Equipamiento {
    public int modificarEnergia(int unaEnergia);

    public String obtenerNombre();
}
