package edu.fiuba.algo3.Modelo;

public class Novato implements Seniority {
    @Override
    public int modificarEnergia(int unaEnergia) {
        return unaEnergia;
    }
}
