package edu.fiuba.algo3.Modelo;

public class Semisenior implements Seniority {
    @Override
    public int modificarEnergia(int unaEnergia) {
        return unaEnergia + 5;
    }
}
